# kdevelop-plugin-move-split-view

./: CMakeLists.txt  README.md  kdevmovesplitview.desktop  kdevmovesplitview.json  kdevmovesplitview.qrc  kdevmovesplitview.rc  kdevswitchviewer.desktop  kdevswitchviewer.rc  movesplitviewplugin.cpp  movesplitviewplugin.h  switchviewerplugin.cpp  switchviewerplugin.h
